# OpenAgentDojo

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  FEATURE_GAPS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  P0_DESIGN.md  P0_DESIGN_11_13.md  P1_DESIGN.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  alembic.ini  mypy.ini  openapi.json  pyproject.toml  ruff.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_seed_badges.py  0003_seed_missions.py  0004_add_submission_indexes.py  0005_user_handle.py  0006_session_last_activity.py  0007_dim_max_score_rename.py  0007_rename_score_dim_max_score_to_max.py  0008_submission_manifest_sha.py  0009_prompt_judgements.py  0010_prompt_judgement_audit_cols.py  0011_tutorial_progress.py  0012_post_mortem_evidence.py  0013_multi_attempt.py  0014_give_up.py  0015_user_consents.py  0016_account_self_service.py  0017_account_event_log.py  0018_account_deleted_event.py  0019_report_verification.py  0020_session_reset_event.py  0021_github_oauth.py  0022_session_mode.py  0023_merge_oauth_and_session_mode.py  0023_merge_oauth_session_mode.py  0024_magic_link_next.py  0025_mission_tags_and_pack_metadata.py  0025_mission_tags_pack_metadata.py  0026_recommendation_cache.py  0027_recommendation_cache_extras.py  0028_session_notes.py  0029_replay_artifact_index.py  0030_llm_cache.py  0031_coaching_opt_out.py  0032_coaching_cache_user_index.py  0033_session_notes_byte_check.py
apps/api/app/: __init__.py  config.py  healthz.py  main.py  observability.py
apps/api/app/agent/: __init__.py  injection.py  intents.py  llm.py  router.py  service.py  templates.py
apps/api/app/auth/: __init__.py  csrf.py  deps.py  email.py  (+5 more)
apps/api/scripts/: backfill_verification.py  bootstrap_calibration.py  check_env_examples.py  check_missions.py  dump_openapi.py  entrypoint.sh  process_deletion_grace.py  replay_determinism.py  sweep_stale_exports.py  validate_missions.py
apps/api/tests/: conftest.py  test_account_deletion_grace.py  test_account_email_change.py  test_account_event_log.py  test_account_sign_out_all.py  test_account_tombstone_uniqueness.py  test_agent_intents.py  test_agent_llm_fallback.py  test_agent_pipeline.py  test_agent_templates.py  test_agent_turn_race.py  test_alembic_heads_single.py  test_apply_patch.py  test_auth_callback_redirect.py  test_badges.py  test_banned_commands.py  test_cold_start_ladder_valid.py  test_config.py  test_config_validation.py  test_consent_endpoints.py  test_cors_methods.py  test_csrf_middleware.py  test_data_export_bundle.py  test_data_export_kick.py  test_data_export_latest.py  test_data_export_one_in_flight.py  test_deletion_lock_middleware.py  test_docker_hardening.py  test_email_change_link_url.py  test_email_change_toctou.py  test_event_contract.py  test_event_truncation_at_emit.py  test_events_drain_circuit_break.py  test_events_redis_unavailable.py  test_events_serialisation_fault.py  test_export_sweep.py  test_failure_mode_to_dim_lockstep.py  test_files_search_exit_code.py  test_freeze_and_grade_local.py  test_github_oauth.py  (+100 more)
(+916 files in other folders)
