[project]
name = "agentarena-api"
version = "0.1.0"
description = "AgentSupervisor Arena — FastAPI backend"
requires-python = ">=3.12,<3.13"
authors = [{ name = "AgentArena" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14",
    "pyyaml>=6.0.2",
    "jsonschema>=4.23",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    "loguru>=0.7",
    "redis>=5.2",
    "rq>=2.0",
    "boto3>=1.35",
    "docker>=7.1",
    "jinja2>=3.1",
    "prometheus-client>=0.21",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "unidiff>=0.7.5",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
    "pytest-docker>=3.1",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: integration tests requiring external services",
    "docker: tests that require Docker",
]

[tool.coverage.run]
source = ["app"]
branch = true
# No omit list — agent/ and grading/ are the highest-stakes modules in the
# repo (deterministic grading, sandboxed execution). They must appear in
# coverage reports so we notice when a refactor drops their coverage.

[tool.coverage.report]
show_missing = true
skip_covered = false
